--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -342,7 +342,7 @@
             </div>
         </div>
         <div class="box character-talents">
-            <div class="talents-grid">
+            <div class="grid talents-grid">
                 <div class="talents-box header"><h1 data-i18n="talent-u">TALENTS</h1></div>
                 <div class="talents-box2 column-header"><span data-i18n="type">Type</span></div>
                 <div class="talents-box3 column-header"><span data-i18n="rank">Rank</span></div>
@@ -405,16 +405,16 @@
         </div>
         <div class="box character-weapons">
             <div class="grid weapons-grid">
-                <div class="weapons-box header"><h1 data-i18n="weapon-u">WEAPONS</h1></div>
+                <div class="weapons-box-header header"><h1 data-i18n="weapon-u">WEAPONS</h1></div>
                 <span class="column-header" data-i18n="name">Name</span>      
                 <span class="column-header" data-i18n="skill">Skill</span>
                 <span class="column-header" data-i18n="bonus">Bonus</span>
                 <span class="column-header" data-i18n="dmg-abbr">Dmg</span>
                 <span class="column-header" data-i18n="range">Range</span>
                 <span class="column-header" data-i18n="features">Features</span>
-                <div class="weapons-box9">
+                <div class="weapons-box">
                     <fieldset class="repeating_weapons">
-                        <div class="weapons-grid">
+                        <div class="grid repeating-weapons-grid">
                             <button class="roll-button dicefontd6" type="action" name="act_attack-roll" title="Update Dice Pool">L</button>
                             <input class="input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />
                             <select class="input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
