--- a/Adventures in Middle Earth/Adventures in Middle Earth.html
+++ b/Adventures in Middle Earth/Adventures in Middle Earth.html
@@ -175,7 +175,7 @@
                     <span data-i18n="survival-u">SURVIVAL</span>
                     <input class="num" type="text" name="attr_npc_survival_base" placeholder="0">
                 </div>
-				<div class="row" data-i18n-list-item="traditions">
+		<div class="row" data-i18n-list-item="traditions">
                     <span data-i18n="traditions-u">TRADITIONS</span>
                     <input class="num" type="text" name="attr_npc_traditions_base" placeholder="0">
                 </div>
@@ -188,18 +188,18 @@
             <input type="hidden" name="attr_npc_insight" value="@{wisdom_mod}">
             <input type="hidden" name="attr_npc_intimidation" value="@{charisma_mod}">
             <input type="hidden" name="attr_npc_investigation" value="@{intelligence_mod}">
-			<input type="hidden" name="attr_npc_lore" value="@{intelligence_mod}">
+	    <input type="hidden" name="attr_npc_lore" value="@{intelligence_mod}">
             <input type="hidden" name="attr_npc_medicine" value="@{wisdom_mod}">
             <input type="hidden" name="attr_npc_nature" value="@{intelligence_mod}">
             <input type="hidden" name="attr_npc_perception" value="@{wisdom_mod}">
             <input type="hidden" name="attr_npc_performance" value="@{charisma_mod}">
             <input type="hidden" name="attr_npc_persuasion" value="@{charisma_mod}">
             <input type="hidden" name="attr_npc_riddle" value="@{intelligence_mod}">
-			<input type="hidden" name="attr_npc_shadowlore" value="@{intelligence_mod}">
+	    <input type="hidden" name="attr_npc_shadowlore" value="@{intelligence_mod}">
             <input type="hidden" name="attr_npc_sleight_of_hand" value="@{dexterity_mod}">
             <input type="hidden" name="attr_npc_stealth" value="@{dexterity_mod}">
             <input type="hidden" name="attr_npc_survival" value="@{wisdom_mod}">
-			<input type="hidden" name="attr_npc_traditions" value="@{intelligence_mod}">
+            <input type="hidden" name="attr_npc_traditions" value="@{intelligence_mod}">
         </div>
         <div class="row">
             <span data-i18n="damage-vuln-u">DAMAGE VULNERABILITIES</span>
@@ -985,13 +985,13 @@
             <div class="top">
                 <div class="hlabel-container">
                     <input class="flag" type="hidden" name="attr_custom_class" value="0">
-                    <input class="showing" type="text" name="attr_cust_class" value="@{cust_classname}" disabled="true" style="width: 64px; height: 28px; padding-top: 10px;">
+                    <input class="showing" type="text" name="attr_cust_class" value="@{cust_classname}" disabled="true" style="width: 32px; height: 14x; padding-top: 8px;">
                     <select class="hiding class" name="attr_class">
                         <option value="" data-i18n="choose">Choose</option>
-						<option value="Scholar" data-i18n="scholar">Scholar</option>
+			<option value="Scholar" data-i18n="scholar">Scholar</option>
                         <option value="Slayer" data-i18n="slayer">Slayer</option>
-						<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
-						<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
+			<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
+			<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
                         <option value="Warden" data-i18n="warden">Warden</option>  
                         <option value="Warrior" data-i18n="warrior">Warrior</option>
                     </select>
@@ -1026,15 +1026,15 @@
             </div>
             <div class="bottom">
                 <div class="hlabel-container">
-                    <input type="text" name="attr_race">
-                    <span class="label" data-i18n="race-u">CULTURE</span>
+                    <input type="text" name="attr_culture">
+                    <span class="label" data-i18n="culture-u">CULTURE</span>
                 </div>
                 <div class="hlabel-container">
-                    <input type="text" name="attr_alignment">
-                    <span class="label" data-i18n="alignment-u">SHADOW WEAKNESS</span>
+                    <input type="text" name="attr_shadow_weakness" style="width: 122px;">
+                    <span class="label" data-i18n="shadow-weakness-u">SHADOW WEAKNESS</span>
                 </div>
                 <div class="hlabel-container">
-                    <input type="text" name="attr_experience">
+                    <input type="text" name="attr_experience" style="width: 122px;">
                     <span class="label" data-i18n="exp-pts-u">EXPERIENCE POINTS</span>
                 </div>
             </div>
@@ -1588,7 +1588,7 @@
                  </fieldset>
             </div>
             <div class="equipment">
-                <div class="money">
+               <div class="money">
                     <div class="coin">
                         <span class="label" data-i18n="gold-u">G</span>
                         <input type="text" name="attr_gold" title="@{gold}" value="0">
@@ -1601,7 +1601,8 @@
                         <span class="label" data-i18n="copper-u">C</span>
                         <input type="text" name="attr_copper" title="@{copper}" value="0">
                     </div>
-                </div>
+                </div>                
+
                 <input type="hidden" class="inventoryflag" name="attr_simpleinventory" value="complex">
                 <textarea class="simple" name="attr_equipment"></textarea>
                 <div class="complex">
@@ -1671,7 +1672,7 @@
             </div>
             <div class="textbox">
                 <textarea name="attr_specialty"></textarea>
-                <span class="label" data-i18n="specialty-u">SPECIALITY</span>
+                <span class="label" data-i18n="specialty-u">SPECIALTY</span>
             </div>
             <div class="textbox">
                 <textarea name="attr_hope"></textarea>
@@ -1679,7 +1680,7 @@
             </div>
             <div class="textbox">
                 <textarea name="attr_dispair" style="min-height: 46px; height: 46px;"></textarea>
-                <span class="label" data-i18n="dispair-u">DESPAIR</span>
+                <span class="label" data-i18n="dispair-u">DISPAIR</span>
             </div>
            <div class="resources">
                 <div class="hdice-dsaves-container" style="width: 246px; margin-top: 10px;">
@@ -1742,7 +1743,8 @@
                                     <select name="attr_source">
                                         <option selected="selected" data-i18n="racial">Cultural</option>
                                         <option data-i18n="class">Class</option>
-                                        <option data-i18n="feat">Virtue</option>
+                                        <option data-i18n="cv">Virtue</option>
+                                        <option data-i18n="feat">Feat</option>
                                         <option data-i18n="background">Background</option>
                                         <option data-i18n="other">Other</option>
                                     </select>
@@ -3819,11 +3821,11 @@
             <div class="bottom">
                 <div class="hlabel-container">
                     <input type="text" name="attr_race">
-                    <span class="label" data-i18n="race-u">CULTURE</span>
+                    <span class="label" data-i18n="culture-u">CULTURE</span>
                 </div>
                 <div class="hlabel-container">
                     <input type="text" name="attr_alignment">
-                    <span class="label" data-i18n="alignment-u">ALIGNMENT</span>
+                    <span class="label" data-i18n="shadow-weakness-u">SHADOW WEAKNESS</span>
                 </div>
                 <div class="hlabel-container">
                     <input type="text" name="attr_experience">
@@ -3862,10 +3864,10 @@
                     <input type="checkbox" name="attr_multiclass1_flag" value="1">
                     <span data-i18n="2nd-class:-u">2ND CLASS:</span>
                     <select name="attr_multiclass1" style="width: 64px;">
-						<option value="Scholar" data-i18n="scholar">Scholar</option>
+			<option value="Scholar" data-i18n="scholar">Scholar</option>
                         <option value="Slayer" data-i18n="slayer">Slayer</option>
-						<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
-						<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
+			<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
+			<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
                         <option value="Warden" data-i18n="warden">Warden</option>  
                         <option value="Warrior" data-i18n="warrior">Warrior</option>
                     </select>
@@ -3876,10 +3878,10 @@
                     <input type="checkbox" name="attr_multiclass2_flag" value="1">
                     <span data-i18n="3rd-class:-u">3RD CLASS:</span>
                     <select name="attr_multiclass2" style="width: 64px;">
-						<option value="Scholar" data-i18n="scholar">Scholar</option>
+			<option value="Scholar" data-i18n="scholar">Scholar</option>
                         <option value="Slayer" data-i18n="slayer">Slayer</option>
-						<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
-						<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
+			<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
+			<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
                         <option value="Warden" data-i18n="warden">Warden</option>  
                         <option value="Warrior" data-i18n="warrior">Warrior</option>
                     </select>
@@ -3890,10 +3892,10 @@
                     <input type="checkbox" name="attr_multiclass3_flag" value="1">
                     <span data-i18n="4th-class:-u">4TH CLASS:</span>
                     <select name="attr_multiclass3" style="width: 64px;">
-						<option value="Scholar" data-i18n="scholar">Scholar</option>
+			<option value="Scholar" data-i18n="scholar">Scholar</option>
                         <option value="Slayer" data-i18n="slayer">Slayer</option>
-						<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
-						<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
+			<option value="Treasure Hunter" data-i18n="treasurehunter">Treasure Hunter</option>
+			<option value="Wanderer" data-i18n="wanderer">Wanderer</option>
                         <option value="Warden" data-i18n="warden">Warden</option>  
                         <option value="Warrior" data-i18n="warrior">Warrior</option>
                     </select>
