fixed aestetics, first draft done

--- a/Mutant Year Zero/mutantyearzero.htm
+++ b/Mutant Year Zero/mutantyearzero.htm
@@ -23,56 +23,68 @@
                     <div class="grid attributes-grid">
                         <div class="attributes-box-header header"><h1 data-i18n="attribute-u">ATTRIBUTES</h1></div>
                         <!--- STRENGTH & DAMAGE -->
-                        <span class="label" data-i18n="strength">Strength</span>
+                        <h2 data-i18n="strength">Strength</h2>
                         <input class="input-number" type="number" name="attr_strength_max" value="0" min="0" title="@{strength_max}" />
                         <input class="input-number" type="text" name="attr_strength" value="0" title="@{strength}" readonly />
-                        <div class="wounds">
-                            <input type="radio" name="attr_damage" value="0" style="margin:2px 8px 0 0;" data-i18n-title="no-damage" title="No Damage" checked="checked" />
-                            <input class="skull" type="radio" name="attr_damage" value="1" title="@{damage}" /><span></span>
-                            <input class="skull" type="radio" name="attr_damage" value="2" title="@{damage}" /><span></span>
-                            <input class="skull" type="radio" name="attr_damage" value="3" title="@{damage}" /><span></span>
-                            <input class="skull" type="radio" name="attr_damage" value="4" title="@{damage}" /><span></span>
-                            <input class="skull" type="radio" name="attr_damage" value="5" title="@{damage}" /><span></span>
-                            <input class="skull" type="radio" name="attr_damage" value="6" title="@{damage}" /><span></span>
+                        <div class="wounds-grid">
+                            <h3 data-i18n="damage">Damage</h3>
+                            <div>
+                                <input name="attr_damage" title="No Damage" type="radio" value="0" checked />
+                                <input class="skull" name="attr_damage" value="1" title="@{damage}" type="radio" /><span></span>
+                                <input class="skull" name="attr_damage" value="2" title="@{damage}" type="radio" /><span></span>
+                                <input class="skull" name="attr_damage" value="3" title="@{damage}" type="radio" /><span></span>
+                                <input class="skull" name="attr_damage" value="4" title="@{damage}" type="radio" /><span></span>
+                                <input class="skull" name="attr_damage" value="5" title="@{damage}" type="radio" /><span></span>
+                                <input class="skull" name="attr_damage" value="6" title="@{damage}" type="radio" /><span></span>
+                            </div>
                         </div>
                          <!--- AGILITY & FATIGUE -->
-                        <span class="label" data-i18n="agility">Agility</span>
+                        <h2 data-i18n="agility">Agility</h2>
                         <input class="input-number" type="number" name="attr_agility_max" value="0" min="0" title="@{agility}" />
                         <input class="input-number" type="text" name="attr_agility" value="0" title="@{agility}" readonly />
-                        <div class="wounds">
-                            <input type="radio" name="attr_fatigue" value="0" style="margin:2px 8px 0 0;" data-i18n-title="no-damage" title="No Damage" checked="checked" />
-                            <input class="skull" type="radio" name="attr_fatigue" value="1" title="@{fatigue}" /><span></span>
-                            <input class="skull" type="radio" name="attr_fatigue" value="2" title="@{fatigue}" /><span></span>
-                            <input class="skull" type="radio" name="attr_fatigue" value="3" title="@{fatigue}" /><span></span>
-                            <input class="skull" type="radio" name="attr_fatigue" value="4" title="@{fatigue}" /><span></span>
-                            <input class="skull" type="radio" name="attr_fatigue" value="5" title="@{fatigue}" /><span></span>
-                            <input class="skull" type="radio" name="attr_fatigue" value="6" title="@{fatigue}" /><span></span>
+                        <div class="wounds-grid">
+                            <h3 data-i18n="fatigue">Fatigue</h3>
+                            <div>
+                                <input name="attr_fatigue" title="No Damage" type="radio" value="0" checked />
+                                <input class="skull" name="attr_fatigue" value="1" title="@{fatigue}" type="radio" /><span></span>
+                                <input class="skull" name="attr_fatigue" value="2" title="@{fatigue}" type="radio" /><span></span>
+                                <input class="skull" name="attr_fatigue" value="3" title="@{fatigue}" type="radio" /><span></span>
+                                <input class="skull" name="attr_fatigue" value="4" title="@{fatigue}" type="radio" /><span></span>
+                                <input class="skull" name="attr_fatigue" value="5" title="@{fatigue}" type="radio" /><span></span>
+                                <input class="skull" name="attr_fatigue" value="6" title="@{fatigue}" type="radio" /><span></span>
+                            </div>
                         </div>
                          <!--- WITS & CONFUSION -->
-                        <span class="label" data-i18n="wits">Wits</span>
+                        <h2 data-i18n="wits">Wits</h2>
                         <input class="input-number" type="number" name="attr_wits_max" value="0" min="0" title="@{wits}" />
                         <input class="input-number" type="text" name="attr_wits" value="0" title="@{wits}" readonly />
-                        <div class="wounds">
-                            <input type="radio" name="attr_confusion" value="0" style="margin:2px 8px 0 0;" data-i18n-title="no-damage" title="No Damage" checked="checked" />
-                            <input class="skull" type="radio" name="attr_confusion" value="1" title="@{confusion}" /><span></span>
-                            <input class="skull" type="radio" name="attr_confusion" value="2" title="@{confusion}" /><span></span>
-                            <input class="skull" type="radio" name="attr_confusion" value="3" title="@{confusion}" /><span></span>
-                            <input class="skull" type="radio" name="attr_confusion" value="4" title="@{confusion}" /><span></span>
-                            <input class="skull" type="radio" name="attr_confusion" value="5" title="@{confusion}" /><span></span>
-                            <input class="skull" type="radio" name="attr_confusion" value="6" title="@{confusion}" /><span></span>
+                        <div class="wounds-grid">
+                            <h3 data-i18n="confusion">Confusion</h3>
+                            <div>
+                                <input name="attr_confusion" title="No Damage" type="radio" value="0" checked />
+                                <input class="skull" name="attr_confusion" value="1" title="@{confusion}" type="radio" /><span></span>
+                                <input class="skull" name="attr_confusion" value="2" title="@{confusion}" type="radio" /><span></span>
+                                <input class="skull" name="attr_confusion" value="3" title="@{confusion}" type="radio" /><span></span>
+                                <input class="skull" name="attr_confusion" value="4" title="@{confusion}" type="radio" /><span></span>
+                                <input class="skull" name="attr_confusion" value="5" title="@{confusion}" type="radio" /><span></span>
+                                <input class="skull" name="attr_confusion" value="6" title="@{confusion}" type="radio" /><span></span>
+                            </div>
                         </div>
                         <!--- EMPATHY & DOUBT -->
-                        <span class="label" data-i18n="empathy">Empathy</span>
+                        <h2 data-i18n="empathy">Empathy</h2>
                         <input class="input-number" type="number" name="attr_empathy_max" value="0" min="0" title="@{empathy}" />
                         <input class="input-number" type="text" name="attr_empathy" value="0" title="@{empathy}" readonly /> 
-                        <div class="wounds">
-                            <input type="radio" name="attr_doubt" value="0" style="margin:2px 8px 0 0;" data-i18n-title="no-damage" title="No Damage" checked="checked" />
-                            <input class="skull" type="radio" name="attr_doubt" value="1" title="@{doubt}" /><span></span>
-                            <input class="skull" type="radio" name="attr_doubt" value="2" title="@{doubt}" /><span></span>
-                            <input class="skull" type="radio" name="attr_doubt" value="3" title="@{doubt}" /><span></span>
-                            <input class="skull" type="radio" name="attr_doubt" value="4" title="@{doubt}" /><span></span>
-                            <input class="skull" type="radio" name="attr_doubt" value="5" title="@{doubt}" /><span></span>
-                            <input class="skull" type="radio" name="attr_doubt" value="6" title="@{doubt}" /><span></span>
+                        <div class="wounds-grid">
+                            <h3 data-i18n="doubt">Doubt</h3>
+                            <div>
+                                <input name="attr_doubt" title="No Damage" type="radio" value="0" checked />
+                                <input class="skull" name="attr_doubt" value="1" title="@{doubt}" type="radio" /><span></span>
+                                <input class="skull" name="attr_doubt" value="2" title="@{doubt}" type="radio" /><span></span>
+                                <input class="skull" name="attr_doubt" value="3" title="@{doubt}" type="radio" /><span></span>
+                                <input class="skull" name="attr_doubt" value="4" title="@{doubt}" type="radio" /><span></span>
+                                <input class="skull" name="attr_doubt" value="5" title="@{doubt}" type="radio" /><span></span>
+                                <input class="skull" name="attr_doubt" value="6" title="@{doubt}" type="radio" /><span></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -289,49 +301,50 @@
                     </div>
                 </div> 
                 <div class="box character-weapons">
-                    <div class="grid weapons-grid">
-                        <div class="weapons-box-header header"><h1 data-i18n="weapon-u">WEAPONS</h1></div>
-                        <span class="column-header" data-i18n="name">Name</span>      
-                        <span class="column-header" data-i18n="skill">Skill</span>
-                        <span class="column-header" data-i18n="bonus">Bonus</span>
-                        <span class="column-header" data-i18n="dmg-abbr">Dmg</span>
-                        <span class="column-header" data-i18n="range">Range</span>
-                        <span class="column-header" data-i18n="features">Features</span>
-                        <div class="weapons-box">
-                            <fieldset class="repeating_weapons">
-                                <div class="grid repeating-weapons-grid">
-                                    <button class="roll-button dicefontd6" type="action" name="act_attack-roll" title="Update Dice Pool">L</button>
-                                    <input class="input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />
-                                    <select class="input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
-                                        <option value="0" selected data-i18n="fight">Fight</option>
-                                        <option value="1" data-i18n="shoot">Shoot</option>
-                                    </select>
-                                    <select class="input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
-                                        <option value="0">0</option>
-                                        <option value="1" selected>1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                        <option value="6">6</option>
-                                        <option value="7">7</option>
-                                        <option value="8">8</option>
-                                        <option value="9">9</option>
-                                        <option value="10">10</option>
-                                        <option value="11">11</option>
-                                        <option value="12">12</option>
-                                    </select>
-                                    <input class="input-number" type="number" name="attr_weapon_damage" value="1" min="0" title="@{repeating_weapons_$X_weapon_damage}" />
-                                    <select class="input" name="attr_weapon_range" title="@{repeating_weapons_$X_weapon_range}">
-                                        <option value="Arm" selected data-i18n="arms-length-abbr">Arm's L.</option>
-                                        <option value="Near" data-i18n="near">Near</option>
-                                        <option value="Short" data-i18n="short">Short</option>
-                                        <option value="Long" data-i18n="long">Long</option>
-                                    </select>
-                                    <input class="input" type="text" name="attr_weapon_features" value="" title="@{repeating_weapons_$X_weapon_features}" />
-                                </div>
-                            </fieldset>
-                        </div>
+                    <div class="grid weapons-grid header">
+                        <h1 data-i18n="weapon-u">WEAPONS</h1>
+                        <h2 data-i18n="name">Name</h2>      
+                        <h2 data-i18n="skill">Skill</h2>
+                        <h2 data-i18n="bonus">Bonus</h2>
+                        <h2 data-i18n="dmg-abbr">Dmg</h2>
+                        <h2 data-i18n="range">Range</h2>
+                        <h2 data-i18n="features">Features</h2>
+                    </div>
+                    <div class="weapons-box">
+                        <fieldset class="repeating_weapons">
+                            <div class="grid repeating-weapons-grid">
+                                <button class="roll-button dicefontd6" type="action" name="act_attack-roll" title="Update Dice Pool">L</button>
+                                <input class="input" type="text" name="attr_weapon_name" value="" title="@{repeating_weapons_$X_weapon_name}" />
+                                <select class="input" name="attr_weapon_skill" title="@{repeating_weapons_$X_weapon_skill}">
+                                    <option value="0" selected data-i18n="fight">Fight</option>
+                                    <option value="1" data-i18n="shoot">Shoot</option>
+                                </select>
+                                <select class="input" name="attr_weapon_bonus" title="@{repeating_weapons_$X_weapon_bonus}">
+                                    <option value="0">0</option>
+                                    <option value="1" selected>1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                </select>
+                                <input class="input-number" type="number" name="attr_weapon_damage" value="1" min="0" title="@{repeating_weapons_$X_weapon_damage}" />
+                                <select class="input" name="attr_weapon_range" title="@{repeating_weapons_$X_weapon_range}">
+                                    <option value="Arm" selected data-i18n="arms-length-abbr">Arm's L.</option>
+                                    <option value="Near" data-i18n="near">Near</option>
+                                    <option value="Short" data-i18n="short">Short</option>
+                                    <option value="Long" data-i18n="long">Long</option>
+                                </select>
+                                <input class="input" type="text" name="attr_weapon_features" value="" title="@{repeating_weapons_$X_weapon_features}" />
+                            </div>
+                            <hr />
+                        </fieldset>
                     </div>
                 </div>
                 <div class="box character-armor">
@@ -724,6 +737,7 @@
                         <input class="input" type="text" name="attr_name" value="" title="@{repeating_bosses_$X_name}" />
                         <input class="input" type="text" name="attr_type" value="" title="@{repeating_bosses_$X_type}" />
                     </div>
+                    <hr />
                 </fieldset>
             </div>
         </div>
@@ -769,7 +783,8 @@
                     <input class="input-number" name="attr_coordinates" title="@{repeating_log_$X_coordinates}" type="text"value=""  />
                     <input class="input-number" name="attr_terrain" title="@{repeating_log_$X_terrain}" type="text" value="" />
                     <input class="input-number" name="attr_rot_level" title="@{repeating_log_$X_rot_level}" type="text" value="" />
-                    <input class="input-number" type="checkbox" name="attr_threat" title="@{repeating_log_$X_threat}" value="" /><span></span>
+                    <input name="attr_threat" title="@{repeating_log_$X_threat}" type="checkbox" /><span></span>
+                    <input class="input-number" name="attr_threat_notes" title="@{repeating_log_$X_threat_notes}" type="text" value="" />
                     <input class="input-number" name="attr_comment" title="@{repeating_log_$X_comment}" type="text" value="" />
                 </div>
                 <hr />
@@ -1124,9 +1139,9 @@ on("change:armor1_equiped change:armor1_damage change:armor1_bonus change:armor2
             const stat = parseInt(v[attributes[attribute]], 10) || 0;
             translationKey = getTranslationByKey(attribute);
             const update = {
-                attribute: (stat > 0) ? stat : 0,
-                skill: parseInt(v[`${attribute}`], 10) || 0,
-                current_preset: translationKey,
+                base        : (stat > 0) ? stat : 0,
+                skill            : parseInt(v[`${attribute}`], 10) || 0,
+                current_preset   : translationKey,
                 include_with_roll: ""
             };
             setAttributes(update, false);
